..F....... [ZBXNEXT-1786] redesigned menu popups using jQuery Menu (Eduard)
..F....... [ZBXNEXT-1786] updated jQuery-ui to latest (Eduard)
..F....... [ZBX-6976] changed minimal php version parameter (Vitalij)
..F....... [ZBX-6846] the print link work with javascript instead of reloading the whole page (Vitalij)

Bug fixes:
..F....... [ZBX-6968] fixed add/remove favorites icon javascript (Vitalij)
..F....... [ZBX-6946] fixed octal numbers problem in trigger expression test (Vitalij)
...G...... [ZBX-6902] reverting Solaris system.swap.size calculation from "swap -s" (used in 2.0.7, 2.0.8) to "swap -l"-like algorithm (as in 2.0.6) (Andris)
...GI..PS. [ZBX-6955] fixed library order in linking, fixed compiler warnings, improved performance of zbx_snprintf_alloc() function (Andris)
........S. [ZBX-6981] fixed SQL error during lld trigger creation (wiper)
A......... [ZBX-6866] fixed beeing able to add graph items from other hosts for templated graphs (Ivo)
..F....... [ZBX-6854] fixed javascript error on pages with checkboxes, but without main checkbox (Vitalij)
..F....... [ZBX-6873] fixed errors in page switching after executing an action (Ivo)

--------------------------------------------------------------------------------
Changes for 2.1.4

New features:
A.F.I..PS. [ZBXNEXT-1633] implemented host prototypes (Pavels, Sasha)
.......PS. [ZBXNEXT-1633] implemented monitoring of vCenter and vSphere (Alexei, Sasha, wiper)

Bug fixes:
.......P.. [ZBX-6936] fixed MySQL errors when updating configuration of the proxy (Sasha)
.......P.. [ZBX-6929] fixed updating of lastlogsize and mtime in the proxy's database (Sasha)
....I..... [ZBX-6890] added missing indexes in child-tables for foreign key contraints, rename some indexes to meet naming convention (Andris)
..F....... [ZBX-6887] allowed to translate "Internal" in a different way in authentication, event and user context (Eduard)
A......... [ZBX-6124] removed unused API methods (Eduard)