@@ -8,6 +8,7 @@ A.F.I..... [ZBXNEXT-1786] implemented script name tree in menu popups (Eduard, S
 ..F....... [ZBX-6846] the print link work with javascript instead of reloading the whole page (Vitalij)
 
 Bug fixes:
+..F....... [ZBX-6804] optimized min item clock calculation for graph (Eduard)
 ..F....... [ZBX-6968] fixed add/remove favorites icon javascript (Vitalij)
 ..F....... [ZBX-6946] fixed octal numbers problem in trigger expression test (Vitalij)
 ...G...... [ZBX-6902] reverting Solaris system.swap.size calculation from "swap -s" (used in 2.0.7, 2.0.8) to "swap -l"-like algorithm (as in 2.0.6) (Andris)
@@ -407,6 +408,7 @@ New features:
 A.F....... [ZBX-1357] updated Chinese (China), Lithuanian and Slovak translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-6804] optimized min item clock calculation for graph (Eduard)
 ...G...... [ZBX-6902] reverting Solaris system.swap.size calculation from "swap -s" (used in 2.0.7, 2.0.8) to "swap -l"-like algorithm (as in 2.0.6) (Andris)
 .......P.. [ZBX-6936] fixed MySQL errors when updating configuration of the proxy (Sasha)
 .......P.. [ZBX-6929] fixed updating of lastlogsize and mtime in the proxy's database (Sasha)
